--- a/06/component-carasoule.html
+++ b/06/component-carasoule.html
@@ -20,8 +20,7 @@
         border-radius: 8px;
         transform: scale(1.5);
       }
-      .btn-right,
-      .btn-left {
+     .btn {
         height: 30px;
         width:30px;
         scale:1.5;
@@ -30,15 +29,18 @@
         border-radius: 50% ;
         background-color: #ffffff;
         box-shadow: 0 12px 20px rgba(0, 0,0,0.3);
+        position: absolute;
+
       }
       .btn-left {
-        position: absolute;
-        top:50%;
-        transform: translate(50%,-50%);
+        top:50%;  /*based on parent position*/
+        left:0;
+        transform: translate(-50%,-50%); /* based on element size*/
       }
       .btn-right {
-        position: absolute;
         top:50%;
+        right:0;
+        transform: translate(50%,-50%);
       }
       .author {
         font-weight: bold;
@@ -69,7 +71,7 @@
         <p class="author">Maria Stanley</p>
         <p class="company">Product Manager at EDP commercial</p>
       </blockquote>
-      <button class="btn-left">
+      <button class="btn btn-left">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -85,7 +87,7 @@
           />
         </svg>
       </button>
-      <button class="btn-right">
+      <button class="btn btn-right">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
