--- a/06/component-carasoule.html
+++ b/06/component-carasoule.html
@@ -20,27 +20,26 @@
         border-radius: 8px;
         transform: scale(1.5);
       }
-     .btn {
+      .btn {
         height: 30px;
-        width:30px;
-        scale:1.5;
+        width: 30px;
+        scale: 1.5;
         stroke: #add4c7;
-        border:none;
-        border-radius: 50% ;
+        border: none;
+        border-radius: 50%;
         background-color: #ffffff;
-        box-shadow: 0 12px 20px rgba(0, 0,0,0.3);
+        box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3);
         position: absolute;
-
       }
       .btn-left {
-        top:50%;  /*based on parent position*/
-        left:0;
-        transform: translate(-50%,-50%); /* based on element size*/
+        top: 50%; /*based on parent position*/
+        left: 0;
+        transform: translate(-50%, -50%); /* based on element size*/
       }
       .btn-right {
-        top:50%;
-        right:0;
-        transform: translate(50%,-50%);
+        top: 50%;
+        right: 0;
+        transform: translate(50%, -50%);
       }
       .author {
         font-weight: bold;
@@ -104,10 +103,10 @@
         </svg>
       </button>
       <div class="dots">
-        <div class="dot dot-1-filled"></div>
-        <div class="dot dot-2"></div>
-        <div class="dot dot-3"></div>
-        <div class="dot dot-4"></div>
+        <button class="dot dot-1-filled"></button>
+        <button class="dot dot-2"></button>
+        <button class="dot dot-3"></button>
+        <button class="dot dot-4"></button>
       </div>
     </div>
   </body>
