--- a/index.html
+++ b/index.html
@@ -1,61 +1,62 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="row"></div>
-        <div class="row-1"></div>
-        <div class="col-1">
-            <section class="sction-1 col-1-section-1"></section>
-            <section class="section-1 col-1-section-2"></section>
+      <div class="row"></div>
+      <div class="rows">
+          <div class="row-1"></div>
+          <div class="row-2"></div>
+          <div class="row-3"></div>
+      </div>
+      <div class="col-1">
+        <section class="sction-1 col-1-section-1"></section>
+        <section class="section-1 col-1-section-2"></section>
+      </div>
+      <div class="col-2">
+        <section class="section-2"></section>
+        <section class="section-2"></section>
+        <section class="section-2"></section>
+        <section class="section-2"></section>
+        <section class="section-2"></section>
+        <section class="section-2"></section>
+        <section class="section-2"></section>
+        <section class="section-2"></section>
+      </div>
+      <div class="col-3">
+        <div class="col-3-section">
+          <p class="col-3-p-1"></p>
+          <div class="col-3-div-1"></div>
+          <div class="col-3-div-1"></div>
         </div>
-        <div class="row-2"></div>
-        <div class="col-2">
-        <section class="section-2"></section>
-        <section class="section-2"></section>
-        <section class="section-2"></section>
-        <section class="section-2"></section>
-        <section class="section-2"></section>
-        <section class="section-2"></section>
-        <section class="section-2"></section>
-        <section class="section-2"></section>
-    </div>
+        <div class="col-3-section">
+          <p class="col-3-p-2"></p>
+          <div class="col-3-div-2"></div>
+          <div class="col-3-div-2"></div>
         </div>
-        <div class="row-3"></div>
-        <div class="col-3">
-            <div class="col-3-section">
-                <p class="col-3-p-1"></p>
-                <div class="col-3-div-1"></div>
-                <div class="col-3-div-1"></div>
-            </div>
-            <div class="col-3-section">
-                <p class="col-3-p-2"></p>
-                <div class="col-3-div-2"></div>
-                <div class="col-3-div-2"></div>
-            </div>
-            <div class="col-3-section">
-                <p class="col-3-p-3"></p>
-                <div class="col-3-div-3"></div>
-                <div class="col-3-div-3"></div>
-            </div>
-            </div>
-            <div class="row-4">
-                <div class="row-4-col-4"></div>
-                <div class="row-4-col-4-1"></div>
-                <div class="row-4-col-4-1"></div>
-                <div class="row-4-col-4-1"></div>
-                <div class="row-4-col-4-2"></div>
-                <div class="row-4-col-4-3"></div>
-                <div class="row-4-col-4-4"></div>
-            </div>
-            <div class="row-5">
-                <div class="col-4 col-4-1"></div>
-                <div class="col-4 col-4-2"></div>
-            </div>
+        <div class="col-3-section">
+          <p class="col-3-p-3"></p>
+          <div class="col-3-div-3"></div>
+          <div class="col-3-div-3"></div>
+        </div>
+      </div>
+      <div class="row-4">
+        <div class="row-4-col-4"></div>
+        <div class="row-4-col-4-1"></div>
+        <div class="row-4-col-4-1"></div>
+        <div class="row-4-col-4-1"></div>
+        <div class="row-4-col-4-2"></div>
+        <div class="row-4-col-4-3"></div>
+        <div class="row-4-col-4-4"></div>
+      </div>
+      <div class="row-5">
+        <div class="col-4 col-4-1"></div>
+        <div class="col-4 col-4-2"></div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
