--- a/index.html
+++ b/index.html
@@ -9,39 +9,43 @@
     <div class="container">
       <div class="row"></div>
       <div class="rows">
-          <div class="row-1"></div>
-          <div class="row-2"></div>
-          <div class="row-3"></div>
+        <div class="row-1"></div>
+        <div class="row-2"></div>
+        <div class="row-3"></div>
       </div>
       <div class="col-1">
         <section class="sction-1 col-1-section-1"></section>
         <section class="section-1 col-1-section-2"></section>
       </div>
       <div class="col-2">
-        <section class="section-2"></section>
-        <section class="section-2"></section>
-        <section class="section-2"></section>
-        <section class="section-2"></section>
-        <section class="section-2"></section>
-        <section class="section-2"></section>
-        <section class="section-2"></section>
-        <section class="section-2"></section>
+        <div class="div-col-2">
+          <section class="section-2"></section>
+          <section class="section-2"></section>
+          <section class="section-2"></section>
+          <section class="section-2"></section>
+          <section class="section-2"></section>
+          <section class="section-2"></section>
+          <section class="section-2"></section>
+          <section class="section-2"></section>
+        </div>
       </div>
       <div class="col-3">
-        <div class="col-3-section">
-          <p class="col-3-p-1"></p>
-          <div class="col-3-div-1"></div>
-          <div class="col-3-div-1"></div>
-        </div>
-        <div class="col-3-section">
-          <p class="col-3-p-2"></p>
-          <div class="col-3-div-2"></div>
-          <div class="col-3-div-2"></div>
-        </div>
-        <div class="col-3-section">
-          <p class="col-3-p-3"></p>
-          <div class="col-3-div-3"></div>
-          <div class="col-3-div-3"></div>
+        <div class="div-col-3">
+          <div class="col-3-section">
+            <p class="col-3-p-1"></p>
+            <div class="col-3-div-1"></div>
+            <div class="col-3-div-1"></div>
+          </div>
+          <div class="col-3-section">
+            <p class="col-3-p-2"></p>
+            <div class="col-3-div-2"></div>
+            <div class="col-3-div-2"></div>
+          </div>
+          <div class="col-3-section">
+            <p class="col-3-p-3"></p>
+            <div class="col-3-div-3"></div>
+            <div class="col-3-div-3"></div>
+          </div>
         </div>
       </div>
       <div class="row-4">
